Experience editor form Add editor for experience Fix issue with overflow in scroll section Add label property to Input, Select, TextArea editor components Change view of admin settings list Add show/hidden functionality for admin setting list

--- a/Frontend/src/components/editor/index.scss
+++ b/Frontend/src/components/editor/index.scss
@@ -7,7 +7,6 @@
   gap: 1rem;
 
   & &__form {
-    max-width: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +23,8 @@
   }
 
   & &__input,
-  & &__select {
+  & &__select,
+  & &__textarea {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid var(--color-primary);
@@ -32,5 +32,9 @@
     outline: none;
     font-size: 1rem;
     font-family: inherit;
+  }
+
+  & &__textarea {
+    resize: vertical;
   }
 }
