--- a/Frontend/src/pages/Admin/admin-settings.scss
+++ b/Frontend/src/pages/Admin/admin-settings.scss
@@ -2,10 +2,11 @@
   & &__lists-container {
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
   }
 
   & &__list {
-    flex: 1;
+    flex: 1 1 50%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -23,9 +24,13 @@
       flex: 1;
       padding: 0.5rem;
       background-color: var(--color-secondary);
-      display: flex;
       flex-direction: column;
       gap: 0.5rem;
+      display: none;
+
+      &.active {
+        display: flex;
+      }
     }
   }
 
